<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/course_detail_menu_add_new"
        android:icon="@drawable/icon_add_box"
        android:title="@string/menu_course_detail_title"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_course_detail_add_new_assessment"
                android:title="@string/add_new_assessment"
                android:icon="@drawable/icon_assessment"/>
            <item
                android:id="@+id/menu_course_detail_add_new_note"
                android:title="@string/add_new_note"
                android:icon="@drawable/icon_note"/>
        </menu>


    </item>

    <item
        android:id="@+id/course_detail_menu_actions"
        android:icon="@drawable/icon_task"
        android:iconTint="@color/color_scheme_yellow"
        android:iconTintMode="src_atop"
        android:title="@string/action_button_title"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_course_detail_save"
                android:icon="@drawable/icon_save"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_save" />
            <item
                android:id="@+id/menu_course_detail_cancel"
                android:icon="@drawable/icon_cancel"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_cancel" />
            <item
                android:id="@+id/menu_course_detail_delete"
                android:icon="@drawable/icon_delete"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_delete" />
        </menu>


    </item>

</menu>
