<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/term_detail_menu"
        android:icon="@drawable/icon_add_box"
        app:showAsAction="always"
        android:title="@string/menu_title_add">

        <menu>

            <item android:id="@+id/term_detail_menu_add_course"
                android:title="@string/add_new_class"
                android:icon="@drawable/icon_course"/>

        </menu>
    </item>

    <item android:id="@+id/term_detail_menu_actions"
        android:icon="@drawable/icon_task"
        android:iconTint="@color/color_scheme_yellow"
        android:iconTintMode="src_atop"
        app:showAsAction="always"
        android:title="@string/action_button_title">

        <menu>
            <item android:id="@+id/menu_term_detail_save"
                android:title="@string/button_save"
                android:icon="@drawable/icon_save"
                android:onClick="onClickedButtonTermDetailSave"
                android:iconTint="@color/color_scheme_yellow" />
            <item android:id="@+id/menu_term_detail_cancel"
                android:title="@string/button_cancel"
                android:icon="@drawable/icon_cancel"
                android:onClick="onClickedButtonTermDetailCancel"
                android:iconTint="@color/color_scheme_yellow"/>
            <item android:id="@+id/menu_term_detail_delete"
                android:title="@string/button_delete"
                android:icon="@drawable/icon_delete"
                android:onClick="onClickedButtonTermDetailDelete"
                android:iconTint="@color/color_scheme_yellow"/>
        </menu>



    </item>

</menu>