<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/assessment_details_menu_actions"
        app:showAsAction="always"
        android:icon="@drawable/icon_task"
        android:iconTint="@color/color_scheme_yellow"
        android:iconTintMode="src_atop"
        android:title="@string/action_button_title">

        <menu>
            <item
                android:id="@+id/assessment_details_menu_save"
                android:icon="@drawable/icon_save"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_save" />
            <item
                android:id="@+id/assessment_details_menu_cancel"
                android:icon="@drawable/icon_cancel"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_cancel" />
            <item
                android:id="@+id/assessment_details_menu_delete"
                android:icon="@drawable/icon_delete"
                android:iconTint="@color/color_scheme_yellow"
                android:title="@string/button_delete" />
        </menu>


    </item>
</menu>