<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ViewControllers.AddNew.AddNewNote">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noteTitleCaption"
            style="@style/custom_headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/headline_title" />

        <EditText
            android:id="@+id/editTextNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitleCaption"
            android:hint="@string/hint_enter_title"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />


        <TextView
            android:id="@+id/noteCourseCaption"
            style="@style/custom_headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/editTextNoteTitle"
            android:text="@string/spinner_select_course" />

        <Spinner
            android:id="@+id/spinnerAddNewNoteSelectCourse"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noteCourseCaption"
            android:contentDescription="@string/content_description_spinner_select_course"
            android:dropDownWidth="match_parent"
            android:minHeight="48dp"
            android:popupTheme="@style/MaterialAlertDialog.Material3.Title.Panel"
            android:prompt="@string/spinner_prompt_select_course" />


        <TextView
            android:id="@+id/noteTextCaption"
            style="@style/custom_headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerAddNewNoteSelectCourse"
            android:layout_marginTop="10dp"
            android:text="@string/note_title" />

        <EditText
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/noteTextCaption"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="text"
            android:background="@drawable/note_text_border"
            android:gravity="top"
            android:hint="@string/hint_enter_note"
            android:inputType="textMultiLine"
            android:minHeight="300dp"
            android:padding="10dp"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

</ScrollView>